--- a/package.json
+++ b/package.json
@@ -9,11 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.4.1",
+    "@google/generative-ai": "^0.21.0",
+    "@neondatabase/serverless": "^0.10.3",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.3",
+    "inngest": "^3.26.2",
+    "lucide-react": "^0.460.0",
+    "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "15.0.3"
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.28.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
